# Eredin

./: .gitignore  README.md
eredin_comms/: platformio.ini
eredin_comms/src/: main.cpp
eredin_core/: Cargo.toml  Embed.toml  README.md  memory.x
eredin_core/src/: main.rs
eredin_sitl/: CMakeLists.txt  bridge_config.yaml  package.xml
eredin_sitl/src/: control.cpp
eredin_sitl/urdf/: x500.urdf
eredin_sitl/worlds/: hardcoded_x500.sdf
