[package]
name = "eredin_core"
version = "0.1.0"
edition = "2024"
target = "thumbv7em-none-eabihf"
rustflags = "-C link-arg=-Tlink.x"

[dependencies]
cortex-m = { version = "0.7" , features = ["critical-section-single-core"] }
cortex-m-rt = "0.7"
panic-halt = "1.0.0"
rtt-target = { version = "0.6.1" }
panic-rtt-target = { version = "0.2.0"}
#probe-rs = "0.29.0"

#stm32h7 = { version = "0.16.0", features = ["stm32h743", "rt"] }
stm32h7xx-hal = { version = "0.16.0", features = ["stm32h743", "rt"] }
rtic = { version = "2.0", features = ["thumbv7-backend"] }
rtic-monotonics = { version = "2.1.0", features = ["stm32_tim2", "cortex-m-systick"] }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[features]
run-hitl = []
