<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>eredin_sitl</name>
  <version>0.1.0</version>
  <description>Simulation and bridge nodes for the Vanttecontroller v1.0</description>
  <maintainer email="danfoot4567@gmail.com">root</maintainer>
  <license>gpl2</license>

  <buildtool_depend>ament_cmake_python</buildtool_depend>
  
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <depend>rclpy</depend>
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>actuator_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>tf2_ros</depend>
  <exec_depend>ros2launch</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
